# hwpx-mcp

./: .dockerignore  .gitignore  AGENTS.md  DISTRIBUTION_PRD.md  Dockerfile  README.kr.md  README.md  WINDOWS_DISTRIBUTION_PRD.md  WINDOWS_RELEASE_ACTIONS.md  docker-compose.yml  hwpx-mcp-backend.spec  pyproject.toml  requirements.txt  start-stack-windows.bat  start-stack-windows.ps1
.github/workflows/: windows-x64-release.yml
apps/agent-chat/: AGENTS.md  package.json  tsconfig.electron.json  tsconfig.renderer.json  vite.config.ts
electron-ui/: AGENTS.md  installer.nsh  main.js  package-lock.json  package.json  preload.js
electron-ui/scripts/: after-pack.js  ensure-local-model.js  ensure-vcredist.js  ensure-wine.js  install-local-model.py  installer.nsh  runtime-manager.js  start-stack.js
electron-ui/src/: index.html  renderer.js  styles.css
hwpx_mcp/: AGENTS.md  __init__.py  __main__.py  config.py  gateway_server.py  runtime_paths.py  server.py
hwpx_mcp/agentic/: AGENTS.md  __init__.py  gateway.py  grouping.py  http_api.py  local_model.py  models.py  openrouter_agent.py  registry.py  retrieval.py  router.py  tool_only_agent.py
hwpx_mcp/core/: validator.py  xml_parser.py
hwpx_mcp/eval/: queries.jsonl  run_eval.py
hwpx_mcp/features/: query.py  smart_edit.py
hwpx_mcp/models/: owpml.py
hwpx_mcp/tests/: AGENTS.md  __init__.py  test_agent_http_api.py  test_agent_tool_registration.py  test_agentic_gateway.py  test_agentic_registry.py  test_agentic_retrieval.py  test_agentic_router.py  test_chart_tools.py  test_controller_base.py  test_controller_factory.py  test_cross_platform_controller.py  test_local_model.py  test_openrouter_agent_routing.py  test_runtime_paths.py  test_tool_only_agent.py
scripts/: AGENTS.md  build-backend.ps1  build-backend.sh  build-installer.ps1  build-installer.sh  build-windows-backend.ps1  build-windows-backend.sh  build-windows-codex-proxy.ps1  build-windows-codex-proxy.sh  cleanup-workspace.ps1  cleanup-workspace.sh  commit-push.ps1  commit-push.sh  generate_previews.py  pyi_rth_hwpx_patch.py  quick-start-bunx.ps1  quick-start-bunx.sh
src/: server.py
templates/: AGENTS.md  h01_career_resume.hwpx  h02_basics_report1.hwpx  h02_design_resume.hwpx  h03_hard_report2.hwpx  h04_family_message.hwpx  h04_very_hard_report3.hwpx  h05_dissertation.hwpx  h05_seeks_the_pup.hwpx  h06_description_newrecruit_resume.hwpx  h06_project_proposal.hwpx  h07_details_newrecruit_resume.hwpx  h08_description_career_resume.hwpx  h09_details_career_resume.hwpx  h10_free_description_resume.hwpx  h11_basics_report1.hwpx  h12_basics_report2.hwpx  h13_experiment_report.hwpx  h14_dissertation.hwpx  h15_academic_dissertation.hwpx  h16_film_festival_poster.hwpx  h17_lecture_poster.hwpx  h18_invitation.hwpx  h20_workshop_proposal.hwpx  h21_project_proposal.hwpx  h22_work_report.hwpx  h23_year_end_settlement.hwpx  h24_proceedings.hwpx  h25_certificate_of_award.hwpx  template_index.json
(+37 files in other folders)
