[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "hwp-mcp-extended"
version = "0.3.6"
description = "HWP MCP Server with Chart, Equation, Document, and Template support"
authors = [
    {name = "HWP MCP Team"}
]
dependencies = [
    # Core MCP
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",

    "pywin32>=305; platform_system == 'Windows'",
    
    # Cross-platform HWP processing
    "pyhwp>=0.1a",
    
    # Data Processing
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    
    # Validation
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    
    # HWPX creation
    "python-hwpx>=1.9",

    # XML & Security
    "lxml>=5.0.0",
    "defusedxml>=0.7.0",
    "xmlschema>=3.0.0",
    "pydantic-xml>=2.0.0",
    "xmldiff>=2.0.0",

    # HTTP Server (for remote MCP)
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    "httpx>=0.28.0",
    "starlette>=0.38.0",
    "langgraph>=0.2.0",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
windows = [
    "pywin32>=305; platform_system == 'Windows'",
]
installer = [
    "pyinstaller>=6.0.0",
]
all = [
    "pywin32>=305; platform_system == 'Windows'",
    "pyinstaller>=6.0.0",
]

[project.scripts]
hwpx-mcp = "hwpx_mcp.server:main"
hwpx-mcp-gateway = "hwpx_mcp.gateway_server:main"
hwpx-mcp-eval = "hwpx_mcp.eval.run_eval:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["hwpx_mcp"]

[tool.pdm.scripts]
start = "python -m hwpx_mcp.server"
test = "pytest hwpx_mcp/tests/ -v"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["hwpx_mcp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
